# fbsviewer-lib

./: .gitignore  Cargo.toml  README.md  llms.txt
.github/ISSUE_TEMPLATE/: bug-report.yml  encoding-decoding-bug.yml  feature-request.yml
docs/: code-quality-findings.md
docs/blogposts/: flatbuffers-binary-visualizer.md
visualizer/: Cargo.toml  Trunk.toml  build-wasm.sh  index.html
visualizer-cli/: Cargo.toml
visualizer-cli/src/: filter.rs  main.rs  output.rs  schema_input.rs
visualizer-cli/tests/: cli_tests.rs
visualizer-core/: Cargo.toml
visualizer-core/src/: binary_walker.rs  hex_parse.rs  json_decoder.rs  json_encoder.rs  lib.rs  proto_walker.rs  region.rs  schema_loader.rs
visualizer-core/tests/: error_cases.rs  hex_parse_tests.rs  json_encoder_tests.rs  walk_demo_monster.rs
visualizer/.cargo/: config.toml
visualizer/examples/: verify_templates.rs
visualizer/src/: app.rs  hex_view.rs  main.rs  permalink.rs  state.rs  structure_view.rs  syntax.rs  templates.rs  view.rs  wasm_libc_shim.rs
visualizer/wasm-sysroot/include/: assert.h  ctype.h  errno.h  inttypes.h  limits.h  math.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  unistd.h  wchar.h  wctype.h
visualizer/wasm-sysroot/include/sys/: types.h
