[package]
name = "flatbuf-visualizer-core"
version = "0.1.0"
edition = "2021"
description = "Core FlatBuffers binary walking and annotation engine"

[dependencies]
flatc-rs-annotator = { git = "https://github.com/Shuozeli/flatbuffers-rs.git" }
flatc-rs-schema = { git = "https://github.com/Shuozeli/flatbuffers-rs.git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
flatc-rs-compiler = { git = "https://github.com/Shuozeli/flatbuffers-rs.git" }
