[package]
name = "flatbuf-visualizer"
version = "0.1.0"
edition = "2021"
description = "Interactive FlatBuffers binary encoding visualizer"

[[bin]]
name = "flatbuf-visualizer"
path = "src/main.rs"

[dependencies]
flatbuf-visualizer-core = { path = "../visualizer-core" }
flatc-rs-compiler = { git = "https://github.com/Shuozeli/flatbuffers-rs.git" }
flatc-rs-fbs-gen = { git = "https://github.com/Shuozeli/flatbuffers-rs.git" }
flatc-rs-data-gen = { git = "https://github.com/Shuozeli/flatbuffers-rs.git" }
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow"] }
log = "0.4"
serde_json = "1"

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
rfd = "0.15"
# Re-enable native windowing features for eframe
eframe = { version = "0.31", features = ["accesskit", "wayland", "x11"] }

# Web-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlInputElement",
    "HtmlCanvasElement",
    "FileReader",
    "Blob",
    "File",
    "FileList",
    "Event",
    "InputEvent",
    "Response",
    "Headers",
] }
eframe = { version = "0.31", features = ["web_screen_reader"] }
